tests/burghard/pass/elseifoption_after_elseoption.wsa
    push 1
ifoption x
    push 2
elseoption
    push 3
elseifoption y
    push 4
endoption
    push 5
