tests/burghard/fail/elseifoption_no_ifoption.wsa
    push 1
elseifoption x
    push 2
endoption
    push 3
